--- a/dobitnici.html
+++ b/dobitnici.html
@@ -725,6 +725,25 @@
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
     <script src="js/luckmoshyJqueryPagnation.js"></script>
+<!-- 
+    <script>
+        $(document).ready(function() {
+            $('#example').DataTable( {
+                "scrollX": true,
+                "searching": false,
+                "lengthChange": false,
+                "pageLength": 5,
+                "language": {
+                    "paginate": {
+                        "next": "Sledeća",
+                        "previous": "Prethodna"
+                    },
+                    "info": "_END_ od ukupno _TOTAL_ rezultata"
+                },
+            } );
+        } );
+    </script> -->
+
     <script>
         $(document).ready(function() {
             $('#luckmoshy1').luckmoshyPagination({
