--- a/dobitnici.html
+++ b/dobitnici.html
@@ -475,151 +475,135 @@
     </section> -->
     <!-- ALL WINNERS -->
 
-    <div class="container my-5 sorting-table">
+    <div class="container my-5 sorting-table sorting-table--dobitnici">
 
         <table id="dobitnici" class="dobitnici display nowrap table-pager table-pager--loc" style="width:100%">
             <thead style="display: none;">
                 <tr>
                     <th class="custom-select-nonselect"></th>
-                    <th class="custom-select-nonselect"></th>
-                    <th class="custom-select-nonselect"></th>
-                    <th class="custom-select-nonselect"></th>
-                    <th class="custom-select-nonselect"></th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
+                <tr class="half-on-lg">
+                    <td>
+                        <div class="winnerBox">
+                            <div class="winnerBox__img">
+                                <img src="images/dobitnici/win01news.png" alt="">
+                            </div>
+                            <div class="winnerBox__txt">
+                                <p class="wBt-date">04.11.2020.</p>
+                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
+                                <p class="wBt-link">
+                                    Srećni niz dobitnika se nastavlja! Ovog puta,
+                                    Greb Greb 150 glavna premija, u iznosu od
+                                    4.550.000 dinara...
+                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
+                                </p>
+                            </div>
+                        </div>
+                    </td>
                 </tr>
-                <tr>
-                    <td>TC Usce</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
+                <tr class="half-on-lg">
+                    <td>
+                        <div class="winnerBox">
+                            <div class="winnerBox__img">
+                                <img src="images/dobitnici/win01news.png" alt="">
+                            </div>
+                            <div class="winnerBox__txt">
+                                <p class="wBt-date">04.11.2020.</p>
+                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
+                                <p class="wBt-link">
+                                    Srećni niz dobitnika se nastavlja! Ovog puta,
+                                    Greb Greb 150 glavna premija, u iznosu od
+                                    4.550.000 dinara...
+                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
+                                </p>
+                            </div>
+                        </div>
+                    </td>
                 </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
+                <tr class="half-on-lg">
+                    <td>
+                        <div class="winnerBox">
+                            <div class="winnerBox__img">
+                                <img src="images/dobitnici/win01news.png" alt="">
+                            </div>
+                            <div class="winnerBox__txt">
+                                <p class="wBt-date">04.11.2020.</p>
+                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
+                                <p class="wBt-link">
+                                    Srećni niz dobitnika se nastavlja! Ovog puta,
+                                    Greb Greb 150 glavna premija, u iznosu od
+                                    4.550.000 dinara...
+                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
+                                </p>
+                            </div>
+                        </div>
+                    </td>
                 </tr>
-                <tr>
-                    <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Delta city</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Delta city</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
+                <tr class="half-on-lg">
+                    <td>
+                        <div class="winnerBox">
+                            <div class="winnerBox__img">
+                                <img src="images/dobitnici/win01news.png" alt="">
+                            </div>
+                            <div class="winnerBox__txt">
+                                <p class="wBt-date">04.11.2020.</p>
+                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
+                                <p class="wBt-link">
+                                    Srećni niz dobitnika se nastavlja! Ovog puta,
+                                    Greb Greb 150 glavna premija, u iznosu od
+                                    4.550.000 dinara...
+                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
+                                </p>
+                            </div>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
                     <td>Delta city</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
                 </tr>
                 <tr>
                     <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
+                </tr>
+                <tr>
+                    <td>Agencija Jelenak</td>
                 </tr>
                 <tr>
                     <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
+                </tr>
+                <tr>
+                    <td>Agencija Jelenak</td>
                 </tr>
                 <tr>
                     <td>Delta city</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
+                </tr>
+                <tr>
+                    <td>Agencija Jelenak</td>
+                </tr>
+                <tr>
+                    <td>Agencija Jelenak</td>
+                </tr>
+                <tr>
+                    <td>Agencija Jelenak</td>
+                </tr>
+                <tr>
+                    <td>Jelenak</td>
+                </tr>
+                <tr>
+                    <td>Agencija Jelenak</td>
+                </tr>
+                <tr>
+                    <td>Delta city</td>
+                </tr>
+                <tr>
+                    <td>Agencija Jelenak</td>
+                </tr>
+                <tr>
+                    <td>Jelenak</td>
+                </tr>
+                <tr>
+                    <td>Delta city</td>
                 </tr>
             </tbody>
         </table>
@@ -885,7 +869,7 @@
         $(document).ready(function() {
             $('.dobitnici').DataTable( {
                 "scrollX": true,
-                "dom": '<"toolbar_wrapp"<"toolbar">pilfr>t',
+                "dom": '<"toolbar_wrapp"<"toolbar">p<"la-linea">ilfr>t',
                 "searching": false,
                 "ordering": false,
                 "lengthChange": false,
