--- a/dobitnici.html
+++ b/dobitnici.html
@@ -507,15 +507,16 @@
                     <td>
                         <div class="winnerBox">
                             <div class="winnerBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
+                                <img src="images/dobitnici/win02news.png" alt="">
                             </div>
                             <div class="winnerBox__txt">
-                                <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
+                                <p class="wBt-date">24.08.2020.</p>
+                                <h4 class="wBt-headline">Srećne ruke gospođe Dragice</h4>
                                 <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
+                                    Jednu od glavnih premija u novoj instant
+                                    srećki „Greb Greb 150“ u iznosu od
+                                    4.550.000 dinara osvojila je Dragica
+                                    Draganov iz Srema...
                                     <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
                                 </p>
                             </div>
@@ -526,15 +527,15 @@
                     <td>
                         <div class="winnerBox">
                             <div class="winnerBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
+                                <img src="images/dobitnici/win03news.png" alt="">
                             </div>
                             <div class="winnerBox__txt">
-                                <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
+                                <p class="wBt-date">10.03.2020.</p>
+                                <h4 class="wBt-headline">Bingo dobitak za 45 godina braka</h4>
                                 <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
+                                    Dragan Kolović (67) iz Kovina osvojio je čak
+                                    dva dobitka u 9. kolu igre na sreću Bingo -
+                                    Bingo Plus u iznosu od... 
                                     <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
                                 </p>
                             </div>
@@ -545,15 +546,16 @@
                     <td>
                         <div class="winnerBox">
                             <div class="winnerBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
+                                <img src="images/dobitnici/win04news.png" alt="">
                             </div>
                             <div class="winnerBox__txt">
-                                <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
+                                <p class="wBt-date">11.02.2020.</p>
+                                <h4 class="wBt-headline">Srećni dani u Zaječaru</h4>
                                 <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
+                                    Bratislav Janković (21), mladi student i
+                                    košarkaš iz Leskovca, na dan porodične slave,
+                                    otišao je na roditeljski sastanak mlađeg
+                                    brata, jer su roditelji... 
                                     <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
                                 </p>
                             </div>
