--- a/moj-profil.html
+++ b/moj-profil.html
@@ -1101,13 +1101,16 @@
 
                             <div class="col-sm-12 tab-pane fade pt-5" id="poruke1" role="tabpanel"
                                 aria-labelledby="poruke">
-                                <div class="row list-group flex-row list-tab__inner" id="list-tabb" role="tablist">
+                                <div class="row list-group flex-row list-tab__inner list-tab__inner--poruke" id="list-tabb"
+                                    role="tablist">
                                     <button class="btn btn-darkk btn-primary-tab rounded-pill px-3 mx-1 active"
                                         id="primljene-poruke" data-toggle="list" href="#primljene-poruke1" role="tab"
-                                        aria-controls="primljene-poruke">Primljene poruke</button>
+                                        aria-controls="primljene-poruke" style="z-index: 999;">Primljene
+                                        poruke</button>
                                     <button class="btn btn-darkk btn-primary-tab rounded-pill px-3 mx-1"
                                         id="prosledjene-poruke" data-toggle="list" href="#prosledjene-poruke1" role="tab"
-                                        aria-controls="prosledjene-poruke">Prosleđene poruke</button>
+                                        aria-controls="prosledjene-poruke" style="z-index: 999;">Prosleđene
+                                        poruke</button>
                                 </div>
 
                                 <div class="row tab-content">
@@ -1123,19 +1126,47 @@
                                                     <tr>
                                                         <th>Naslov poruke</th>
                                                         <th class="custom-select-nonselect">Datum</th>
-                                                        <th>&nbsp;</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
+                                                    <tr class="font-weight-bold">
+                                                        <td class="cursor-p" data-toggle="modal"
+                                                            data-target="#message-modal">
+                                                            <i class="far fa-envelope mr-2 color-green fa-lg position-relative"><span
+                                                                    class="new-msg new-msg--empty"></span></i>Obaveštenje o
+                                                                dodeli Bonusa...
+                                                        </td>
+                                                        <td>
+                                                            08.09.2020. 12:28 <a href="#" class="ml-3 font-weight-normal">Prosledi poruku</a>
+                                                        </td>
+                                                    </tr>
+                                                    <tr class="font-weight-bold">
+                                                        <td class="cursor-p">
+                                                            <i class="far fa-envelope mr-2 color-green fa-lg position-relative"><span
+                                                                    class="new-msg new-msg--empty"></span></i>Obaveštenje
+                                                                o promeni radnog vremena...
+                                                        </td>
+                                                        <td>
+                                                            08.09.2020. 12:28 <a href="#" class="ml-3 font-weight-normal">Prosledi poruku</a>
+                                                        </td>
+                                                    </tr>
                                                     <tr>
-                                                        <td>
-                                                            <i class="far fa-envelope mr-2 color-green fa-lg"></i><strong>Obaveštenje o
-                                                                dodeli Bonusa...</strong>
+                                                        <td class="cursor-p">
+                                                            <i class="fas fa-envelope-open-text mr-2 color-light-gray fa-lg"></i>Obaveštenje o
+                                                                dodeli Bonusa...
                                                         </td>
                                                         <td>
-                                                            2560651
+                                                            08.09.2020. 12:28 <a href="#" class="ml-3 font-weight-normal">Prosledi poruku</a>
                                                         </td>
-                                                        <td>dsfdsfsdf</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="cursor-p">
+                                                            <i class="fas fa-envelope-open-text mr-2 color-light-gray fa-lg"></i>Obaveštenje o
+                                                                dodeli Bonusa...
+                                                        </td>
+                                                        <td>
+                                                            08.09.2020. 12:28 <a href="#" class="ml-3 font-weight-normal">Prosledi poruku</a>
+                                                        </td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -1366,6 +1397,39 @@
         </div>
     </div>
 
+    <div class="modal fade" tabindex="-1" id="message-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-left">Obaveštenje o dodeli Bonusa</h5>
+                    <p class="text-sm color-light-gray">08.09.2020. 12:28</p>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p class="text-sm">Poštovani Nikola,<br><br>
+                        DLS ti poklanja bonus od 300,00 dinara!<br>
+                        Piklon se može iskoristiti za igranje DLS online igara: Loto,<br>
+                        Loto +, Joker, Bingo i E-srećke.<br>
+                        Bonus možete iskoristiti do 31.12.2020. godine.<br>
+                        Identifikator transakcije - 61969<br>
+                        Srećno!<br><br>
+                        Državna lutrija Srbije<br>
+                        Tel. 0800 202 303<br>
+                        www.lutrija.rs</p>
+                </div>
+                <div class="modal-footer d-flex justify-content-between">
+                    <input type="text" class="form-control" value="zecar.vesna@gmail.com">
+                    <button type="button" class="btn btn-success font-weight-bold px-5" data-toggle="modal"
+                        data-target="#favorite-modal-done" data-dismiss="modal" aria-label="Close">DA</button>
+                    <button type="button" class="btn btn-dark font-weight-bold px-5" data-dismiss="modal"
+                        aria-label="Close">NE</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
@@ -1474,15 +1538,16 @@
 
             $('#primljene').DataTable({
             "scrollX": true,
-            "dom": '<"d-flex justify-content-end mb-4"lfr>t<"d-flex justify-content-between mt-4 mb-2"ip>',
+            "dom": '<"d-flex justify-content-end-lg mb-4"lfr>t<"d-flex justify-content-between mt-4 mb-2"ip>',
                     "searching": true,
                     "lengthChange": true,
-                    "pageLength": 3,
+                    "pageLength": 5,
                     "language": {
                     "paginate": {
                     "next": "Sledeća",
                     "previous": "Prethodna"
                     },
+                    "info": "_END_ od ukupno _TOTAL_ rezultata",
                     "lengthMenu": "Prikaži _MENU_ rezultata po strani",
                     "search": ""
                     }
